removed borders on certain visit components which caused alignment issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,10 +87,14 @@ a:hover {
   text-shadow: 2px 2px 4px rgba(232, 224, 224, 0.7);
   border: 1px solid rgba(232, 224, 224, 0.7);
   border-radius: 10px;
+  min-width: 250px;
+
 }
 
 .about__container {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .about__li {
@@ -99,6 +103,7 @@ a:hover {
   margin: 2rem;
   background-color: rgba(0, 0, 0, 0.05);
   border-radius: 10px;
+  max-width: 1500px;
 }
 
 .menu {
@@ -161,7 +166,6 @@ a:hover {
 
 .history__container p {
   flex: 1;
-  box-sizing: border-box;
 }
 
 .history__image {
@@ -230,7 +234,7 @@ a:hover {
   }
 
   html {
-    overflow-x: hidden; /* Prevent left/right scrolling */
+    overflow-x: hidden;
   }
 
   .about {
@@ -256,7 +260,7 @@ a:hover {
   .history__content {
     position: relative;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.17);
+    background-color: rgba(0, 0, 0, 0.233);
     color: #fff;
     padding: 20px;
   }
@@ -268,16 +272,22 @@ a:hover {
   .visit{
     width: 100vw;
     height: 100vh;
+    background-color: black;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .visit__container {
     display: flex;
     flex-direction: column;
+    margin: 0;
   }
 
   .visit__location, .visit__hours{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    background-size: cover;
+    margin: 0;
   }
 
   .frozen{
